--- a/course-04/project/c4-final-project-starter-code/backend/package.json
+++ b/course-04/project/c4-final-project-starter-code/backend/package.json
@@ -2,6 +2,9 @@
   "name": "serverless-todo-app",
   "version": "1.0.0",
   "description": "Serverless TODO image app",
+  "scripts": {
+    "setoptions": "export NODE_OPTIONS=--max_old_space_size=8192"
+  },
   "dependencies": {
     "@types/axios": "^0.14.0",
     "@types/http-errors": "^1.6.1",
@@ -23,7 +26,7 @@
     "serverless-iam-roles-per-function": "^3.0.2-223021",
     "serverless-plugin-canary-deployments": "^0.4.7",
     "serverless-reqvalidator-plugin": "^1.0.3",
-    "serverless-webpack": "^5.2.0",
+    "serverless-webpack": "^5.3.5",
     "ts-loader": "^5.3.3",
     "typescript": "^3.4.1",
     "webpack": "^4.29.6"
